# python-uv-template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github_release.yml  pypi_deploy.yml  ruff.yml  unit_tests.yml
src/project_name/: __init__.py  logger.py  logger_config.toml
