[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "python-uv-template"
dynamic = ["version"]
description = "A template uv project structure."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
]
authors = [
    {name = "Lari Liuhamo", email = "lari.liuhamo+pypi@gmail.com"},
]
keywords = ["python3",]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "tox>=4.31.0",
    "tox-gh-actions>=3.4.0",
]

[project.urls]
Homepage = "https://pypi.org/project/project-name/"
Repository = "https://github.com/Diapolo10/project-name"
Documentation = "https://github.com/Diapolo10/project-name/tree/main/docs"

[project.scripts]
main = "project_name.main:main"

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@overload",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    ".tox/*",
    "tests/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:tests/reports/coverage-html \
--cov-report xml:tests/reports/coverage.xml \
--ignore=docs/
"""
testpaths = [
    "tests",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Missing trailing comma (disabled due to formatter conflict)
    "D203",    # One blank line before class docstring
    "D212",    # Multi-line summary first line
    "ISC001",  # Single-line implicit string concatenation (disabled due to formatter conflict)
    "PLR0913", # Too many arguments
    "Q000",    # Single quotes found but double quotes preferred
]
line-length = 120
show-fixes = true
src = ["src",]

[tool.ruff.lint.flake8-copyright]
author = "Lari Liuhamo"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401", "F403", "F405", "PGH003",]
"tests/*" = ["ANN", "ARG", "INP001", "S101",]
"logger.py" = ["N815",]

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = py3{11, 12, 13, 14}, pypy3
skip_missing_interpreters = true

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313
    3.14: py314
    pypy-3.11: pypy3

[testenv]
pass_env =
    GITHUB_*
    FORCE_COLOR
allowlist_externals = uv

commands =
    uv run --active --frozen pytest
    uv run --active --frozen coverage report
"""

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true }},
]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
strict = false
vcs = "git"
